--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
+    "@jbrowse/core": "^1.7.4",
     "apollo-schemas": "workspace:^",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
