--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -49,7 +49,7 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/plugin-linear-genome-view": "^1.5.1",
+    "@jbrowse/plugin-linear-genome-view": "^1.7.4",
     "apollo-shared": "workspace:^",
     "clsx": "^1.1.1",
     "file-saver": "^2.0.5",
@@ -57,7 +57,7 @@
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
-    "@jbrowse/core": "*",
+    "@jbrowse/core": "^1.7.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "mobx": "^5.10.1",
@@ -66,9 +66,9 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
-    "@jbrowse/cli": "^1.5.1",
-    "@jbrowse/core": "file:../../jbrowse-core-7221dd8867b1da7273ad19e894b0bbba2e6ecc89.tgz",
-    "@jbrowse/development-tools": "^1.5.3",
+    "@jbrowse/cli": "^1.7.4",
+    "@jbrowse/core": "^1.7.4",
+    "@jbrowse/development-tools": "^1.6.9",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@types/cypress": "^1.1.3",
