--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@jbrowse/core": "^1.7.4",
+    "@nestjs/common": "^8.4.4",
     "apollo-schemas": "workspace:^",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1"
