--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -52,8 +52,8 @@
     "@jbrowse/plugin-linear-genome-view": "^1.7.4",
     "apollo-shared": "workspace:^",
     "clsx": "^1.1.1",
-    "file-saver": "^2.0.5",
     "regenerator-runtime": "^0.13.9",
+    "streamsaver": "^2.0.6",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
@@ -72,9 +72,9 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@types/cypress": "^1.1.3",
-    "@types/file-saver": "^2.0.5",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
+    "@types/streamsaver": "^2.0.1",
     "cypress": "^8.7.0",
     "jest": "^27.3.1",
     "mobx": "^5.10.1",
