--- a/packages/jbrowse-plugin-apollo/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "noEmit": true,
+    "noEmitOnError": true,
   },
   "include": ["src"],
   "exclude": ["**/dist/"],
