--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -36,8 +36,10 @@
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "cache-manager": "^3.6.0",
+    "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "jwt-decode": "^3.1.2",
+    "md5": "^2.3.0",
     "mobx": "^5.10.1",
     "mobx-react": "^6.0.0",
     "mongoose": "^6.2.6",
@@ -60,8 +62,10 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/cache-manager": "^3",
+    "@types/compression": "^1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/md5": "^2",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
