--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -7,3 +7,6 @@ LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
 
 # MongoDB connection
 MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
+
+# Output folder for uploaded files
+FILE_UPLOAD_FOLDER = './test/uploaded'
