--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -35,6 +35,7 @@
     "@types/multer": "^1.4.7",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
+    "body-parser": "^1.20.0",
     "cache-manager": "^3.6.0",
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
@@ -61,6 +62,7 @@
     "@nestjs/cli": "^8.1.2",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/body-parser": "^1",
     "@types/cache-manager": "^3",
     "@types/compression": "^1",
     "@types/express": "^4.17.13",
