--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -19,10 +19,12 @@
     "@nestjs/common": "^8.4.4",
     "apollo-schemas": "workspace:^",
     "regenerator-runtime": "^0.13.9",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
+    "@types/uuid": "^8",
     "mobx-state-tree": "3.14.1",
     "mongoose": "^6.2.10",
     "typescript": "4.4.4"
