--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -10,3 +10,6 @@ MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
 
 # Output folder for uploaded files
 FILE_UPLOAD_FOLDER = './test/uploaded'
+
+# Reference chunck lenght
+CHUNK_LEN = 10000
