--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -6,4 +6,7 @@ CORS = true
 LOGGER_OPTIONS = ["log", "error", "warn", "debug"]
 
 # MongoDB connection
-MONGODB_URI = 'mongodb://localhost:27017/test'
+MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
+
+# Output folder for uploaded files
+FILE_UPLOAD_FOLDER = './test/uploaded'
