--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -32,7 +32,6 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
-    "@types/multer": "^1.4.7",
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "cache-manager": "^3.6.0",
@@ -42,6 +41,7 @@
     "mobx-react": "^6.0.0",
     "mongoose": "^6.2.6",
     "mongoose-id-validator": "^0.6.0",
+    "multer": "^1.4.4",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -61,6 +61,7 @@
     "@types/cache-manager": "^3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
