--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -11,5 +11,5 @@ MONGODB_URI = 'mongodb://localhost:27017/apolloDb'
 # Output folder for uploaded files
 FILE_UPLOAD_FOLDER = './test/uploaded'
 
-# Reference chunck lenght
-CHUNK_LEN = 5000
+# Reference sequence chunk size (optional)
+# CHUNK_SIZE = 5000
