--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -51,6 +51,7 @@
     "@gmod/gff": "^1.2.0",
     "@jbrowse/plugin-linear-genome-view": "^1.7.4",
     "apollo-shared": "workspace:^",
+    "bson": "^4.6.4",
     "clsx": "^1.1.1",
     "regenerator-runtime": "^0.13.9",
     "streamsaver": "^2.0.6",
