--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/core": "^1.7.4",
+    "@jbrowse/core": "^2.0.1",
     "apollo-schemas": "workspace:^",
     "regenerator-runtime": "^0.13.9",
     "tslib": "^2.3.1",
@@ -30,8 +30,7 @@
     "typescript": "4.4.4"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^4.0.0",
     "mobx": "^5.0.0",
     "mobx-react": "^6.0.0",
