--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -48,8 +48,10 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/plugin-linear-genome-view": "^1.7.4",
+    "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "apollo-shared": "workspace:^",
     "clsx": "^1.1.1",
     "regenerator-runtime": "^0.13.9",
@@ -57,22 +59,21 @@
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^1.7.4",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@jbrowse/core": "^2.0.1",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
     "mobx": "^5.10.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "3.14.1",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "tss-react": "^3.7.1"
   },
   "devDependencies": {
-    "@jbrowse/cli": "^1.7.4",
-    "@jbrowse/core": "^1.7.4",
+    "@jbrowse/cli": "^2.0.1",
+    "@jbrowse/core": "^2.0.1",
     "@jbrowse/development-tools": "^1.6.9",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^5.12.3",
     "@types/cypress": "^1.1.3",
     "@types/node": "^16.11.6",
@@ -91,6 +92,7 @@
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
     "ts-node": "^10.3.0",
+    "tss-react": "^3.7.1",
     "typescript": "4.4.4"
   },
   "packageManager": "yarn@3.1.0",
