--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,3 +13,7 @@ packageExtensions:
   mongoose-id-validator@*:
     peerDependencies:
       mongoose: "*"
+  chalk@5.0.1:
+    dependencies:
+      "#ansi-styles": npm:ansi-styles@6.1.0
+      "#supports-color": npm:supports-color@9.2.2
