--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -52,6 +52,7 @@
     "@emotion/styled": "^11.9.3",
     "@gmod/gff": "^1.2.0",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
+    "@mui/icons-material": "^5.8.4",
     "apollo-shared": "workspace:^",
     "clsx": "^1.1.1",
     "regenerator-runtime": "^0.13.9",
@@ -60,11 +61,10 @@
   },
   "peerDependencies": {
     "@jbrowse/core": "^2.0.1",
-    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
-    "mobx": "^5.10.1",
+    "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "3.14.1",
+    "mobx-state-tree": "^5.1.5",
     "react": "^17.0.2",
     "tss-react": "^3.7.1"
   },
@@ -72,7 +72,6 @@
     "@jbrowse/cli": "^2.0.1",
     "@jbrowse/core": "^2.0.1",
     "@jbrowse/development-tools": "^1.6.9",
-    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^5.12.3",
     "@types/cypress": "^1.1.3",
@@ -81,14 +80,14 @@
     "@types/streamsaver": "^2.0.1",
     "cypress": "^8.7.0",
     "jest": "^27.3.1",
-    "mobx": "^5.10.1",
+    "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "3.14.1",
+    "mobx-state-tree": "^5.1.5",
     "npm-run-all": "4.1.5",
     "react": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.59.0",
-    "serve": "^11.3.2",
+    "serve": "^14.0.1",
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
     "ts-node": "^10.3.0",
