--- a/docs/apollo.env
+++ b/docs/apollo.env
@@ -74,3 +74,15 @@ ALLOW_GUEST_USER=true
 # If guest users are allowed, what role will they have
 # Possible values are admin, readOnly and user; defaults to readonly
 GUEST_USER_ROLE=readOnly
+
+# Apollo by default uses The Sequence Ontology. You can override this by
+# providing a path to an ontology file in the OBO Graphs JSON format. You can
+# use `robot` to convert an OBO or OWL to OBO Graphs JSON.
+# http://robot.obolibrary.org/convert
+# ONTOLOGY_FILE = '/data/ontology.json'
+
+# Comma-separated list of Apollo plugins to use
+# PLUGIN_URLS=https://example.com/apollo-plugin-example.umd.production.min.js
+# Alternatively, can be a path to a file with a list of plugin URLs, one URL per
+# line
+# PLUGIN_URLS_FILE=/data/plugin-urls
