--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -23,9 +23,6 @@ SESSION_SECRET=g9fGaRuw06T7hs960Tm7KYyfcFaYEIaG9jfFnVEQ4QyFXmq7
 # Alternatively, can be a path to a file with the session secret
 # SESSION_SECRET_FILE=/run/secrets/session-secret
 
-# Ontology filename
-ONTOLOGY_FILE = '../../test/data/obo-converted.json'
-
 ##############################################################################
 ## To enable users to log in, you need either (or both) Google or Microsoft ##
 ## OAuth configured. Without them, only userless guest access is possible.  ##
@@ -77,6 +74,12 @@ ALLOW_GUEST_USER=true
 # If guest users are allowed, what role will they have
 # Possible values are admin, readOnly and user; defaults to readonly
 # GUEST_USER_ROLE=readOnly
+
+# Apollo by default uses The Sequence Ontology. You can override this by
+# providing a path to an ontology file in the OBO Graphs JSON format. You can
+# use `robot` to convert an OBO or OWL to OBO Graphs JSON.
+# http://robot.obolibrary.org/convert
+# ONTOLOGY_FILE = '/data/ontology.json'
 
 # Comma-separated list of Apollo plugins to use
 # PLUGIN_URLS=https://example.com/apollo-plugin-example.umd.production.min.js
