--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.2.1",
     "@types/node": "^16.0.0",
     "@types/rimraf": "^3",
+    "mobx": "^6.6.1",
     "mobx-state-tree": "^5.1.5",
     "mongoose": "^6.2.10",
     "rimraf": "^3.0.2",
