--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -55,6 +55,7 @@
     "apollo-common": "workspace:^",
     "apollo-mst": "workspace:^",
     "apollo-shared": "workspace:^",
+    "autosuggest-highlight": "^3.3.4",
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.6",
@@ -81,6 +82,7 @@
     "@jest/globals": "^29.0.3",
     "@mui/material": "^5.9.1",
     "@mui/x-data-grid": "^6.0.1",
+    "@types/autosuggest-highlight": "^3",
     "@types/cypress": "^1.1.3",
     "@types/node": "^16.11.6",
     "@types/prop-types": "^15",
