--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -29,9 +29,9 @@
     "@jbrowse/core": "^2.3.4",
     "@mui/base": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.10",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.2.1",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/config": "^2.3.4",
+    "@nestjs/core": "^9.4.3",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/mongoose": "^9.2.1",
@@ -43,6 +43,7 @@
     "apollo-schemas": "workspace:^",
     "apollo-shared": "workspace:^",
     "connect-mongodb-session": "^3.1.1",
+    "express": "^4.18.0",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "material-ui-popup-state": "^5.0.4",
@@ -87,6 +88,7 @@
     "@types/supertest": "^2.0.11",
     "apollo-mst": "workspace:^",
     "jest": "^27.0.6",
+    "mongodb": "^4.7.0",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.20",
