--- a/packages/jbrowse-plugin-apollo/cypress/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/cypress/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "es5",
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"],
+    "strict": true,
+    "allowJs": true,
+    "noEmit": true
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "**/*.js"],
 }
