--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -94,6 +94,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^18",
     "cypress": "^12.17.2",
+    "fake-indexeddb": "^4.0.2",
     "jest": "^29.0.3",
     "jest-fetch-mock": "^3.0.3",
     "mobx": "^6.6.1",
