--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -26,6 +26,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^1.2.0",
+    "@gmod/indexedfasta": "^2.0.4",
     "@jbrowse/core": "^2.3.4",
     "@mui/base": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.10",
@@ -45,6 +46,7 @@
     "connect-mongodb-session": "^3.1.1",
     "express": "^4.18.0",
     "express-session": "^1.17.3",
+    "generic-filehandle": "^3.0.0",
     "joi": "^17.7.0",
     "material-ui-popup-state": "^5.0.4",
     "mobx": "^6.6.1",
