--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
+    "@gmod/indexedfasta": "^2.0.4",
     "@jbrowse/core": "^2.3.4",
     "apollo-common": "workspace:^",
     "apollo-mst": "workspace:^",
     "apollo-schemas": "workspace:^",
     "bson-objectid": "^2.0.3",
+    "generic-filehandle": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.5.4",
