--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -60,6 +60,7 @@
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.6",
+    "nanoid": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.5.3",
     "tslib": "^2.0.3"
