--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -59,6 +59,7 @@
     "autosuggest-highlight": "^3.3.4",
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
+    "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
     "nanoid": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
@@ -86,6 +87,7 @@
     "@mui/x-data-grid": "^6.0.1",
     "@types/autosuggest-highlight": "^3",
     "@types/cypress": "^1.1.3",
+    "@types/file-saver": "^2",
     "@types/node": "^16.11.6",
     "@types/prop-types": "^15",
     "@types/react": "^17.0.34",
