--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@gmod/gff": "^1.2.0",
     "@jbrowse/plugin-authentication": "^2.0.1",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
@@ -58,7 +59,9 @@
     "autosuggest-highlight": "^3.3.4",
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
+    "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
+    "nanoid": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.5.3",
     "tslib": "^2.0.3"
@@ -84,6 +87,7 @@
     "@mui/x-data-grid": "^6.0.1",
     "@types/autosuggest-highlight": "^3",
     "@types/cypress": "^1.1.3",
+    "@types/file-saver": "^2",
     "@types/node": "^16.11.6",
     "@types/prop-types": "^15",
     "@types/react": "^17.0.34",
