--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,5 @@
+enableConstraintsChecks: true
+
 packageExtensions:
   "@jbrowse/core@*":
     peerDependencies:
@@ -23,20 +25,10 @@ packageExtensions:
       react-dom: "*"
   mocha@*:
     dependencies:
-      ts-node: "*"
       source-map-support: "*"
+      ts-node: "*"
   mongoose-id-validator@*:
     peerDependencies:
       mongoose: "*"
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
-  - path: .yarn/plugins/@yarnpkg/plugin-constraints.cjs
-    spec: "@yarnpkg/plugin-constraints"
-
-yarnPath: .yarn/releases/yarn-3.6.4.cjs
+yarnPath: .yarn/releases/yarn-4.1.1.cjs
