--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo3",
   "description": "Monorepo containing Apollo front and back end code",
-  "packageManager": "yarn@3.6.4",
+  "packageManager": "yarn@4.1.1",
   "workspaces": [
     "packages/*"
   ],
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
+    "@yarnpkg/types": "^4.0.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
