--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,5 +26,5 @@ jobs:
         context: .
         file: ../../server.Dockerfile
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/Apollo3:development
+        tags: ghcr.io/${{ github.repository_owner }}/apollo-collaboration-server:development
 
