--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,18 +13,16 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v2
 
-    - name: Log in to the GitHub Container Registry
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.CR_PAT }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./server.Dockerfile
-        push: true
-        tags: ghcr.io/gmod/apollo-collaboration-server:development
+    - name: Build Docker image
+      run: docker build . --file server.Dockerfile --tag ghcr.io/gmod/apollo-collaboration-server:development
+
+    - name: Push Docker image to GitHub Container Registry
+      run: docker push ghcr.io/gmod/apollo-collaboration-server:development
 
