--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,28 +6,26 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
+
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2
 
-    - name: Log in to GitHub Container Registry
+    - name: Log in to the GitHub Container Registry
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build Docker image of Apollo Collaboration server
-      run: docker build -file ./server.Dockerfile -tag ghcr.io/gmod/apollo-collaboration-server:development
-
-    - name: Push Docker image to GitHub Container Registry
-      run: docker push ghcr.io/gmod/apollo-collaboration-server:development
-
-    - name: Build Docker image of Apollo UI
-      run: docker build -file ./client.Dockerfile -tag ghcr.io/gmod/apollo-jbrowse-plugin:development
-
-    - name: Push Docker image to GitHub Container Registry
-      run: docker push ghcr.io/gmod/apollo-jbrowse-plugin:development
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./server.Dockerfile
+        push: true
+        tags: ghcr.io/gmod/apollo-collaboration-server:development
