--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,10 +22,18 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push Docker image
+    - name: Build and push Apollo collaboration server image
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./server.Dockerfile
         push: true
         tags: ghcr.io/gmod/apollo-collaboration-server:development
+
+    - name: Build and push Apollo JBrowse plugin image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./client.Dockerfile
+        push: true
+        tags: ghcr.io/gmod/apollo-jbrowse-plugin:development
